update sql lite repo
